--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.3.3",
   "main": "lib.js",
   "dependencies": {
+    "babel-loader": "^9.1.2",
     "bigint-buffer": "^1.1.5",
     "bip39": "^3.0.4",
     "bn.js": "^5.2.0",
@@ -14,7 +15,9 @@
     "ethereumjs-wallet": "^1.0.1",
     "ffi-napi": "^4.0.3",
     "hash.js": "^1.1.7",
-    "patch-package": "^6.4.7"
+    "patch-package": "^6.4.7",
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -28,7 +31,11 @@
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "assert": "^2.0.0",
     "babel-plugin-macros": "^3.1.0",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -37,10 +44,13 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.5",
+    "os-browserify": "^0.3.0",
     "patch-package": "^6.4.7",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "source-map-explorer": "^2.5.2",
+    "stream-browserify": "^3.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4"
   },
