--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ffi-napi": "^4.0.3",
     "hash.js": "^1.1.7",
     "patch-package": "^6.4.7",
+    "process": "^0.11.10",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3"
   },
